--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,15 @@ after_success:
   - docker push stepanposhyvak/multi-nginx
   - docker push stepanposhyvak/multi-server
   - docker push stepanposhyvak/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'MultiDocker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-114456947757'
+  bucket_path: 'docker-multi'
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
