--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ deploy:
   bucket_path: 'docker-multi'
   on:
     branch: main
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_ACCESS_KEY_VALUE
